--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <div class="col-lg-5">
           <h2>You <span>Work</span> Like at <span>Home</span></h2>
-          <p>Nilai Penting Jujur yang Utama, RPL #WajibNgulik</p>
+          <p>RPL Wajib Ngulik</p>
           <a href="#" class="btn btn-danger tombol">Gallery</a>
         </div>
       </div>
